--- a/IpAddressMonitor/IpAddressMonitor.vcxproj.filters
+++ b/IpAddressMonitor/IpAddressMonitor.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="IpAddressMonitor.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Utils.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Utils.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
