--- a/IpAddressMonitor/IpAddressMonitor.vcxproj
+++ b/IpAddressMonitor/IpAddressMonitor.vcxproj
@@ -133,7 +133,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Utils.cpp" />
     <ClCompile Include="IpAddressMonitor.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
